feat:补充接口&VO关联用户信息